UI fixes for dark mode UI (#289)

--- a/src/components/CodeStep/styles.css
+++ b/src/components/CodeStep/styles.css
@@ -1,4 +1,4 @@
-.step_container {
+.stepContainer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 32px;
@@ -9,6 +9,12 @@
   padding: 16px;
   background: var(--ifm-code-background);
   border-radius: 6px;
+}
+.step_container .item details summary {
+  display: none;
+}
+summary {
+  display: none;
 }
 .code_heading {
   display: flex;
