--- a/src/components/OverviewIconCard/styles.module.css
+++ b/src/components/OverviewIconCard/styles.module.css
@@ -7,3 +7,7 @@
 	height: 250px;
 	opacity: .4;
 }
+
+[data-theme='dark'] .overviewIconCard svg {
+	opacity: .6;
+}
